Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.0.0
-
Fix Version/s: 5.2.0
-
Component/s: GUI: Font handling
-
Labels:None
-
Environment:OS X Lion, Xcode 4.2.1, clang 3.0
Mountain Lion
-
Platform/s:
Description
output for 10.7:
FAIL! : tst_QFontDatabase::addAppFont(font file) 'db.families() == oldFamilies' returned FALSE. ()
Loc: [tst_qfontdatabase.cpp(268)]
output for 10.8:
2012-12-07 13:20:14.239 tst_qfontdatabase[8991:707] Unable to register font: Error Domain=com.apple.coretext Code=-1 "The operation couldn’t be completed. (com.apple.coretext error -1 - Could not register the font file 'FreeMono.ttf -- file://localhost/Users/liangqi/qt/qt5/qtbase/tests/auto/gui/text/qfontdatabase/')" UserInfo=0x1020305b0 {NSDescription=Could not register the font file 'FreeMono.ttf -- file://localhost/Users/liangqi/qt/qt5/qtbase/tests/auto/gui/text/qfontdatabase/', CTFailedFontFileURL=FreeMono.ttf -- file://localhost/Users/liangqi/qt/qt5/qtbase/tests/auto/gui/text/qfontdatabase/} FAIL! : tst_QFontDatabase::addAppFont(font file) Compared QStringLists have different sizes. Actual (db.families()) size: '167' Expected (oldFamilies) size: '166' Loc: [/Users/liangqi/qt/qt5/qtbase/tests/auto/gui/text/qfontdatabase/tst_qfontdatabase.cpp(272)]
Attachments
Issue Links
- depends on
-
QTBUG-28460 missing platform implementation for QFontDatabase::removeApplicationFont()
-
- Closed
-
- is required for
-
QTBUG-24131 Autotests for Qt 5.0 on OSX
-
- Closed
-
- relates to
-
QTBUG-32654 [autotest] tst_qrawfont fails on OSX 10.8
-
- Closed
-